# artie-conversation-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
proto/: chat.proto
src/: main.rs
src/config/: error.rs  mod.rs  pb.rs
src/pb/: mod.rs
src/server/: mod.rs
src/service/: artie_chat.rs  mod.rs  my_chat.rs
