[package]
name = "artie-conversation"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
prost = "0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.11.0"