[package]
name = "artie-conversation"
version = "0.4.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
mongodb = "3.0.0"
tonic = "0.12.0"
tonic-reflection = "0.12.0"
tokio = { version = "1", features = ["full", "signal"] }
prost = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
dotenv = "0.15"
env_logger = "0.11.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12.0"